--- a/app/src/main/res/layout/fragment_reset_successful.xml
+++ b/app/src/main/res/layout/fragment_reset_successful.xml
@@ -14,33 +14,34 @@
             android:id="@+id/tick_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_outline_check_circle_outline_24"
             android:layout_marginTop="120dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/tick_logo"
+            android:src="@drawable/ic_outline_check_circle_outline_24"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/reset_successful_heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
-            android:text="Password Changed!"
+            android:text="@string/password_changed"
             android:textColor="@color/blackTextColor"
             android:textSize="32sp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tick_logo" />
 
         <TextView
-            android:layout_marginHorizontal="80dp"
             android:id="@+id/pass_changed_message"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:layout_marginHorizontal="80dp"
             android:layout_marginTop="20dp"
             android:text="@string/password_changed_message"
             android:textAlignment="center"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/reset_successful_heading" />
@@ -51,10 +52,10 @@
             android:layout_height="wrap_content"
             android:text="@string/continue_"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.2"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pass_changed_message" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pass_changed_message"
+            app:layout_constraintVertical_bias="0.2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
