--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -15,21 +15,22 @@
         android:id="@+id/no_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingHorizontal="32sp"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="26sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:paddingHorizontal="32sp"
-        android:textStyle="bold"
-        android:textSize="26sp"
         tools:text="No Data Available" />
 
     <ProgressBar
         android:id="@+id/stats_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:indeterminateTint="@color/loaderColor"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
