--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -32,6 +32,7 @@
             android:layout_marginHorizontal="24dp"
             android:layout_marginTop="70dp"
             android:hint="@string/current_password"
+            app:boxBackgroundColor="@color/inputEditTextBackground"
             app:endIconMode="password_toggle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +55,7 @@
             android:layout_marginHorizontal="24dp"
             android:layout_marginTop="10dp"
             android:hint="@string/new_password"
+            app:boxBackgroundColor="@color/inputEditTextBackground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/current_password"
@@ -75,6 +77,7 @@
             android:layout_marginHorizontal="24dp"
             android:layout_marginTop="10dp"
             android:hint="@string/confirm_new_password"
+            app:boxBackgroundColor="@color/inputEditTextBackground"
             app:endIconMode="password_toggle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -120,7 +123,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:indeterminate="true"
-                    android:indeterminateTint="#FF9800"
+                    android:indeterminateTint="@color/buttonLoaderColor"
                     android:paddingHorizontal="2dp"
                     android:paddingVertical="2dp"
                     android:visibility="gone" />
