--- a/app/src/main/res/layout/fragment_edit_attendance.xml
+++ b/app/src/main/res/layout/fragment_edit_attendance.xml
@@ -17,8 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:paddingHorizontal="32sp"
-        android:textAlignment="center"
         android:text="@string/no_attendance_taken_yet"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="26sp"
         android:textStyle="bold" />
@@ -28,6 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:indeterminateTint="@color/loaderColor"
         android:visibility="gone" />
 
 </FrameLayout>
