--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -46,6 +46,7 @@
             android:layout_marginHorizontal="24dp"
             android:layout_marginTop="64dp"
             android:hint="@string/prompt_email"
+            app:boxBackgroundColor="@color/inputEditTextBackground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/reset_message"
@@ -92,7 +93,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:indeterminate="true"
-                    android:indeterminateTint="#FF9800"
+                    android:indeterminateTint="@color/buttonLoaderColor"
                     android:paddingHorizontal="2dp"
                     android:paddingVertical="2dp"
                     android:visibility="gone" />
