--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -32,6 +32,7 @@
             android:layout_marginHorizontal="24dp"
             android:layout_marginTop="70dp"
             android:hint="@string/new_password"
+            app:boxBackgroundColor="@color/inputEditTextBackground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/new_password_heading"
@@ -53,6 +54,7 @@
             android:layout_marginHorizontal="24dp"
             android:layout_marginTop="25dp"
             android:hint="@string/confirm_new_password"
+            app:boxBackgroundColor="@color/inputEditTextBackground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/new_password"
@@ -96,7 +98,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:indeterminate="true"
-                    android:indeterminateTint="#FF9800"
+                    android:indeterminateTint="@color/buttonLoaderColor"
                     android:paddingHorizontal="2dp"
                     android:paddingVertical="2dp"
                     android:visibility="gone" />
