--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -17,7 +17,7 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:src="@drawable/default_icon"
-        app:civ_border_color="#FFFFFF"
+        app:civ_border_color="@color/white"
         app:civ_border_width="2dp" />
 
     <TextView
