--- a/app/src/main/res/layout/subject_list_item.xml
+++ b/app/src/main/res/layout/subject_list_item.xml
@@ -1,151 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
 
-    <androidx.cardview.widget.CardView
+    android:layout_marginTop="16dp"
+    app:cardBackgroundColor="@color/card_bg"
+    app:cardCornerRadius="16dp"
+    app:cardElevation="5dp">
+
+    <LinearLayout
+        android:id="@+id/infoLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="16dp"
-        app:cardBackgroundColor="@color/card_bg"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_margin="12dp"
+        android:background="@color/info_bg"
+        android:orientation="horizontal"
+        android:paddingVertical="8dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:orientation="vertical">
 
-
-            <LinearLayout
-                android:id="@+id/infoLayout"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/subject_name"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="12dp"
-                android:background="@color/info_bg"
-                android:baselineAligned="false"
-                android:orientation="horizontal"
-                android:paddingBottom="8dp"
-                app:layout_constraintTop_toTopOf="parent">
+                android:paddingHorizontal="16dp"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:text="Database Management Systems" />
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/subject_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingHorizontal="16dp"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        tools:text="Database Management Systems" />
-
-                    <TextView
-                        android:id="@+id/year"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:paddingHorizontal="24dp"
-                        android:textStyle="bold"
-                        tools:text="2nd Year" />
-
-                    <TextView
-                        android:id="@+id/branch_sec"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingHorizontal="24dp"
-                        android:textStyle="bold"
-                        tools:text="CSE-B" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/theory_lab"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:background="@color/primary"
-                        android:paddingHorizontal="8dp"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
-                        tools:text="Lab" />
-
-                    <TextView
-                        android:id="@+id/group"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:background="@color/primary"
-                        android:paddingHorizontal="8dp"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
-                        tools:text="G1" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/year"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="8dp"
-                android:layout_marginTop="6dp"
-                android:layout_marginBottom="8dp"
-                android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/infoLayout">
 
-                <ImageButton
-                    android:id="@+id/attendance_button"
-                    style="@android:style/Widget.ImageButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:backgroundTint="@color/primary"
-                    android:contentDescription="@string/take_attendance_button"
-                    android:src="@drawable/ic_check_24" />
+                android:paddingHorizontal="16dp"
+                android:textStyle="bold"
+                tools:text="2nd Year" />
 
-                <ImageButton
-                    android:id="@+id/stats_button"
-                    style="@android:style/Widget.ImageButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:backgroundTint="@color/primary"
-                    android:contentDescription="@string/view_stats_button"
-                    android:src="@drawable/ic_assessment_24" />
+            <TextView
+                android:id="@+id/branch_sec"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="16dp"
+                android:textStyle="bold"
+                tools:text="CSE-B" />
 
-                <ImageButton
-                    android:id="@+id/edit_attendance_button"
-                    style="@android:style/Widget.ImageButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:backgroundTint="@color/primary"
-                    android:contentDescription="@string/edit_attendance_button"
-                    android:src="@drawable/ic_create_24" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/theory_lab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@color/primary"
+                android:paddingHorizontal="8dp"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                tools:text="Theory" />
+
+            <TextView
+                android:id="@+id/group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@color/primary"
+                android:paddingHorizontal="8dp"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                tools:text="G1" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textViewOptions"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingHorizontal="5dp"
+            android:text="@string/optionIcon"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:textSize="36sp" />
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
 
 
-            </LinearLayout>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
